--- a/The_Perceptron.ipynb
+++ b/The_Perceptron.ipynb
@@ -390,20 +390,20 @@
         "#### TODO: Add your answer here (code and text)\n",
         "\n",
         "# Answer for Question 3\n",
-        "## Answer A:\n",
+        "## Answer 3A:\n",
         "### It is not always necessary to use the entire training dataset to achieve the highest accuracy on the test dataset. Sometimes, using a smaller subset of the training data with optimal learning rates and epochs can provide comparable or even better performance.\n",
         "\n",
-        "## Answer B:\n",
+        "## Answer 3B:\n",
         "### The observed decrease in accuracy when using more training data with the same hyperparameters\n",
         "### (e.g.,  \n",
         "### tr: 100, epochs: 20, learning rate: 0.050; Accuracy: 71.0 vs.\n",
         "### tr: 200, epochs: 20, learning rate: 0.005; Accuracy: 68.0)\n",
         "### can be attributed to underfitting. When the learning rate is too low, the model may not learn enough from the increased data, leading to suboptimal performance.\n",
         "\n",
-        "## Answer C:\n",
+        "## Answer 3C:\n",
         "### Additional hyperparameters, such as a higher learning rate or more epochs, could potentially push the accuracy beyond 80%. However, this would require careful tuning to avoid overfitting.\n",
         "\n",
-        "## Answer D:\n",
+        "## Answer 3D:\n",
         "### Training for more epochs is not always beneficial. While it might help the model converge, excessive epochs with a fixed learning rate and data size can lead to overfitting, reducing performance on the test set.\n",
         "\n",
         "\n"
